--- a/_columns/The_Big_Picture/zh-cn/2024-10-07.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-07.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Nasdaq Leads Stock Market Drop, Masks Emerging Strength In 2 Sectors As Wall Street Keeps Close Eye On Hurricane Milton
+  Nasdaq Leads Stock Market Drop, Masks Emerging Strength In 2 Sectors As Wall Street Keeps Close Eye On Hurricane Milton	纳斯达克领跌股市，华尔街密切关注飓风米尔顿，掩盖了 2 个板块的新兴实力
 date: 2024-10-07 23:35 -0700
 author: DAVID SAITO-CHUNG
 ---
@@ -10,91 +10,30 @@ author: DAVID SAITO-CHUNG
 
 
 
-The Nasdaq perhaps offered the most disappointing action among the key indexes on Monday. Yet IBD readers who looked beneath the hood saw even more unusual upheaval.
+The Nasdaq perhaps offered the most disappointing action among the key indexes on Monday. Yet IBD readers who looked beneath the hood saw even more unusual upheaval.  
+纳斯达克指数周一可能是主要指数中最令人失望的。然而，深入研究 IBD 的读者看到了更不寻常的剧变。
 
 
 
 
-China has unleashed a storm of rapid-fire measures to stoke its economy. SPDR S&P China ([GXC](https://research.investors.com/quote.aspx?symbol=GXC)) has responded with a bang, catapulting more than 42% since the exchange traded fund rose back above the 10- and 40-week moving averages on Sept. 20.  GXC's move is likely its strongest over a three-week time frame since it started trading in March 2007.
+China has unleashed a storm of rapid-fire measures to stoke its economy. SPDR S&P China ([GXC](https://research.investors.com/quote.aspx?symbol=GXC)) has responded with a bang, catapulting more than 42% since the exchange traded fund rose back above the 10- and 40-week moving averages on Sept. 20.  GXC's move is likely its strongest over a three-week time frame since it started trading in March 2007.  
+中国已经掀起了一场快速措施的风暴来刺激其经济。SPDR S&P China （[GXC）](https://research.investors.com/quote.aspx?symbol=GXC) 做出了重大回应，自 9 月 20 日该交易所交易基金回升至 10 周和 40 周移动平均线上方以来，股价飙升了 42% 以上。 GXC 的走势可能是自 2007 年 3 月开始交易以来在三周内最强劲的走势。
 
 
-On Monday, the yield on the benchmark U.S. Treasury 10-year bond shot back above 4%, closing at its highest level since July 31 and raising the cost of money in the near term.
+On Monday, the yield on the benchmark U.S. Treasury 10-year bond shot back above 4%, closing at its highest level since July 31 and raising the cost of money in the near term.  
+周一，基准美国 10 年期国债收益率回升至 4% 以上，收于 7 月 31 日以来的最高水平，并在短期内提高了资金成本。
 
 
-Finally, fear of another serious hurricane expected to slam the Florida coast in just days affected stocks, many of them leading Wall Street higher, across multiple industries. All of these news items helped shape fierce crosswinds hitting the stock market.
+Finally, fear of another serious hurricane expected to slam the Florida coast in just days affected stocks, many of them leading Wall Street higher, across multiple industries. All of these news items helped shape fierce crosswinds hitting the stock market.  
+最后，对预计在短短几天内将袭击佛罗里达州海岸的另一场严重飓风的担忧影响了多个行业的股票，其中许多股票带领华尔街走高。所有这些新闻都有助于塑造冲击股市的猛烈侧风。
 
 
-The Nasdaq composite's 1.2% drop wasn't necessarily terrible, particularly when you view how other popular stock market benchmarks did. The S&P 500 lost almost 1%. The Dow Jones Industrial Average sank 0.9%. The Russell 2000 backtracked nearly 0.9%.
+The Nasdaq composite's 1.2% drop wasn't necessarily terrible, particularly when you view how other popular stock market benchmarks did. The S&P 500 lost almost 1%. The Dow Jones Industrial Average sank 0.9%. The Russell 2000 backtracked nearly 0.9%.  
+纳斯达克综合指数 1.2% 的跌幅并不一定很糟糕，尤其是当您查看其他受欢迎的股票市场基准的表现时。标准普尔 500 指数下跌近 1%。道琼斯工业平均指数下跌 0.9%。罗素 2000 指数回落了近 0.9%。
 
 
-But for those who heralded the Nasdaq's 1.2% rally on Friday in response to a mostly buoyant U.S. jobs report, Monday's action was disappointing.
-
-
-
-
----
-
-
-[**WSJ Investing Monthly: Why Volume Matters**](https://www.wsj.com/finance/stocks/trading-volume-investors-stock-market-dfe59509)
-
-
-
-
----
-
-
-Nasdaq And The Stock Market Today
----------------------------------
-
-
-When you are in a strong confirmed uptrend, you'd prefer to see the Nasdaq and other major indexes fall modestly after a nice up day. You'd also like to see turnover cool off.
-
-
-Instead, Monday's action showed the direct opposite. The decline virtually wiped out Friday's bullish move. And volume on the Nasdaq rose 2% to 5.24 billion shares vs. Friday.
-
-
-By itself, that's not a dramatic increase in shares exchanging hands. Yet the 1.2% drop was not light, and the sell-off in higher volume translates into an [authentic distribution day](https://www.investors.com/how-to-invest/investors-corner/how-do-you-spot-a-major-market-top-easy-look-for-heavy-distribution/).
-
-
-On the NYSE, 3.64 billion shares traded hands on Monday, up nearly 5%. Again, that's not a tremendous increase. Yet the decline added to the distribution-day count of the S&P 500 as well.
-
-
-A pullback after four straight weekly gains seems perfectly normal. The rally was the longest, time-wise, since late April through mid-May.
-
-
-
-Notice on a weekly chart, too, how the Nasdaq composite still holds a cushion of 1.5% above the rising 10-week moving average. A potential test of this medium-term technical level would be the third since the sell-off that began the week ended July 19 — the heart of second-quarter earnings news.
-
-
-Even before the Nov. 5 U.S. elections take place, expect volatility to increase generally as the wave of third-quarter corporate results hits Wall Street in the following three weeks.
-
-
-**Domino's Pizza** ([DPZ](https://research.investors.com/quote.aspx?symbol=DPZ)) kicks off the new earnings season among large caps with its Thursday-morning report, followed by **JPMorgan Chase** ([JPM](https://research.investors.com/quote.aspx?symbol=JPM)) and **Wells Fargo** ([WFC](https://research.investors.com/quote.aspx?symbol=WFC)) on Friday before the opening bell.
-
-
-Keep tabs on future earnings news via [IBD's Earnings Calendar](https://www.investors.com/research/earnings-calendar-analyst-estimates-stocks-to-watch/).
-
-
-Tracking Professional Selling
------------------------------
-
-
-As the accompanying Market Pulse shows, the count of distribution days, or bouts of heavy professional selling, is at an uncomfortably high level.
-
-
-So, why does the current outlook for the stock market also remain strongly bullish?
-
-
-First of all, despite Monday's sell-off, most major stock market averages are trading fairly close to all-time highs. At 5,695, the S&P 500 lies less than 2% beneath its all-time high of 5,737.
-
-
-The Nasdaq 100 tracker, Invesco QQQ Trust ([QQQ](https://research.investors.com/quote.aspx?symbol=QQQ)), finished the session 4.3% below a pinnacle of 503.52. The SPDR S&P MidCap 400 ([MDY](https://research.investors.com/quote.aspx?symbol=MDY)) exchange traded fund is just 1.5% below its summit.
-
-
-Second, when looking at each individual distribution day on the Nasdaq, only one other session, namely Oct. 1, saw the key index drop at least 1%. The other three distribution days — a 0.2% gain and stalling session on Sept. 17, a 0.3% dip on Sept. 18, and a 0.4% fall on Sept. 20 — did not supply a vicious bite.
-
-
-And third, money continues to flow nicely into sectors that make sense. A few oil and gas firms exceled on Monday amid a nearly 4% spike in Nymex crude oil futures, based on the December expiring contract.
+But for those who heralded the Nasdaq's 1.2% rally on Friday in response to a mostly buoyant U.S. jobs report, Monday's action was disappointing.  
+但对于那些预示纳斯达克指数周五上涨 1.2% 以应对美国就业报告基本活跃的人来说，周一的行动令人失望。
 
 
 
@@ -102,7 +41,8 @@ And third, money continues to flow nicely into sectors that make sense. A few oi
 ---
 
 
-[**Why Warren Buffett, Cathie Wood Both Own These Hot Stocks**](https://www.investors.com/news/warren-buffett-cathie-wood-own-two-stocks-tesla-rival/)
+[**WSJ Investing Monthly: Why Volume Matters  
+WSJ Investing Monthly：为什么交易量很重要**](https://www.wsj.com/finance/stocks/trading-volume-investors-stock-market-dfe59509)
 
 
 
@@ -110,41 +50,73 @@ And third, money continues to flow nicely into sectors that make sense. A few oi
 ---
 
 
-An Energy Sector Rebound
-------------------------
+Nasdaq And The Stock Market Today纳斯达克和今天的股市
+-------------------------------------------
 
 
-**Generac** ([GNRC](https://research.investors.com/quote.aspx?symbol=GNRC)), a leader in power generators, broke out of a base as Tampa and Orlando brace for what could be a catastrophic hurricane expected to make landfall in Florida on Wednesday evening.
+When you are in a strong confirmed uptrend, you'd prefer to see the Nasdaq and other major indexes fall modestly after a nice up day. You'd also like to see turnover cool off.  
+当您处于强劲的确认上升趋势中时，您更愿意看到纳斯达克和其他主要指数在经历了一个不错的上涨日后小幅下跌。您还希望看到营业额降温。
 
 
-Generac drove past a 158.27 [early buy point](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-spotting-early-entries-on-potential-breakouts/) within a base last week. The National Oceanic and Atmospheric Administration, or NOAA, early Monday raised the level of Hurricane Milton as a Category 5 storm, the highest rating.
+Instead, Monday's action showed the direct opposite. The decline virtually wiped out Friday's bullish move. And volume on the Nasdaq rose 2% to 5.24 billion shares vs. Friday.  
+相反，周一的行动显示出截然相反的情况。下跌几乎抹去了周五的看涨走势。与周五相比，纳斯达克的成交量增长了 2% 至 52.4 亿股。
+
+
+By itself, that's not a dramatic increase in shares exchanging hands. Yet the 1.2% drop was not light, and the sell-off in higher volume translates into an [authentic distribution day](https://www.investors.com/how-to-invest/investors-corner/how-do-you-spot-a-major-market-top-easy-look-for-heavy-distribution/).  
+就其本身而言，这并不是股票易手的大幅增加。然而，1.2% 的跌幅并不小，大批量的抛售转化为[真正的分销日](https://www.investors.com/how-to-invest/investors-corner/how-do-you-spot-a-major-market-top-easy-look-for-heavy-distribution/)。
+
+
+On the NYSE, 3.64 billion shares traded hands on Monday, up nearly 5%. Again, that's not a tremendous increase. Yet the decline added to the distribution-day count of the S&P 500 as well.  
+在纽约证券交易所，周一有 36.4 亿股成交，上涨近 5%。同样，这并不是一个巨大的增长。然而，这种下降也增加了标准普尔 500 指数的分配日数。
+
+
+A pullback after four straight weekly gains seems perfectly normal. The rally was the longest, time-wise, since late April through mid-May.  
+连续四周上涨后出现回调似乎完全正常。这次反弹是自 4 月下旬到 5 月中旬以来持续时间最长的一次。
 
 
 
-Meanwhile, building products retailers **Home Depot** ([HD](https://research.investors.com/quote.aspx?symbol=HD)) and **Lowe's** ([LOW](https://research.investors.com/quote.aspx?symbol=LOW)) have rallied sharply off their spring and summertime lows as hurricane-hit communities from the Panhandle region of Florida up through Western North Carolina rush to rebuild in the aftermath of Hurricane Helene, which hit the U.S. shores as a Category 4 disaster.
+Notice on a weekly chart, too, how the Nasdaq composite still holds a cushion of 1.5% above the rising 10-week moving average. A potential test of this medium-term technical level would be the third since the sell-off that began the week ended July 19 — the heart of second-quarter earnings news.  
+在周线图上也可以注意到，纳斯达克综合指数仍然在上升的 10 周移动平均线上方保持 1.5% 的缓冲。对这一中期技术水平的潜在测试将是自截至 7 月 19 日当周开始的抛售以来的第三次测试，这是第二季度财报新闻的核心。
 
 
-A Heavy Industrial Glow
------------------------
+Even before the Nov. 5 U.S. elections take place, expect volatility to increase generally as the wave of third-quarter corporate results hits Wall Street in the following three weeks.  
+即使在 11 月 5 日美国大选举行之前，预计波动性也将普遍增加，因为在接下来的三周内，第三季度企业业绩的浪潮将冲击华尔街。
 
 
-Another industry that bucked Monday's decline? Heavy construction and engineering firms.
+**Domino's Pizza** ([DPZ](https://research.investors.com/quote.aspx?symbol=DPZ)) kicks off the new earnings season among large caps with its Thursday-morning report, followed by **JPMorgan Chase** ([JPM](https://research.investors.com/quote.aspx?symbol=JPM)) and **Wells Fargo** ([WFC](https://research.investors.com/quote.aspx?symbol=WFC)) on Friday before the opening bell.  
+**达美乐披萨** （[DPZ](https://research.investors.com/quote.aspx?symbol=DPZ)） 周四早盘公布财报，拉开了大盘股新一轮财报的序幕，摩**根大通** （[JPM](https://research.investors.com/quote.aspx?symbol=JPM)） 和**富**国银行 （[WFC](https://research.investors.com/quote.aspx?symbol=WFC)） 紧随其后，周五开盘前公布。
 
 
-
-**Fluor** ([FLR](https://research.investors.com/quote.aspx?symbol=FLR)) rallied 1.3% in above-average turnover to mark its fourth straight gain. The expert in construction and maintenance services for the oil, chemical, mining and transport industries lifted above a [double bottom showing a 50.48 buy point](https://www.investors.com/how-to-invest/investors-corner/double-bottoms-make-sure-the-second-leg-undercuts-the-first/). From this entry, the [5% buy zone](https://www.investors.com/how-to-invest/investors-corner/buy-zone-nvidia-stock/) goes up to 53.
-
-
-**Jacobs** ([J](https://research.investors.com/quote.aspx?symbol=J)), which also got some air time in [recent episodes of "IBD Live](https://research.investors.com/ibdlive/?id=IBD-Live&src=A00582A)," fell 1.5% to 137.97. That snapped a nine-day winning streak. But shares have acted bullishly since Jacobs roared past resistance near 127 and an early entry at 126.74 within its 2-1/2-month base. The large cap, with a $17 billion market value and 124.2 million shares outstanding, has risen as much as 11% from the 126.74 [proper buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/).
+Keep tabs on future earnings news via [IBD's Earnings Calendar](https://www.investors.com/research/earnings-calendar-analyst-estimates-stocks-to-watch/).  
+通过 [IBD 的收益日历](https://www.investors.com/research/earnings-calendar-analyst-estimates-stocks-to-watch/)密切关注未来的收益新闻。
 
 
-Neither Fluor nor Jacobs have shown big earnings and sales gains in recent quarters, but it appears some fund managers have been accumulating shares in anticipation of mild double-digit profit increases in the next fiscal year.
+Tracking Professional Selling追踪专业销售
+-----------------------------------
 
 
-They both possess a decent 92 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/the-ibd-composite-rating/).
+As the accompanying Market Pulse shows, the count of distribution days, or bouts of heavy professional selling, is at an uncomfortably high level.  
+正如随附的 Market Pulse 所示，分销天数或大量专业销售的计数处于令人不安的高水平。
 
 
-Meanwhile, almost all of the [Magnificent Seven megacap techs](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/) did even worse than the major stock market benchmarks, weighing not only on the Nasdaq but also on other large-cap indexes.
+So, why does the current outlook for the stock market also remain strongly bullish?  
+那么，为什么目前股市的前景仍然非常看涨呢？
+
+
+First of all, despite Monday's sell-off, most major stock market averages are trading fairly close to all-time highs. At 5,695, the S&P 500 lies less than 2% beneath its all-time high of 5,737.  
+首先，尽管周一出现抛售，但大多数主要股市的平均价格都相当接近历史高点。标准普尔 500 指数报 5,695 点，比其历史高点 5,737 点低不到 2%。
+
+
+The Nasdaq 100 tracker, Invesco QQQ Trust ([QQQ](https://research.investors.com/quote.aspx?symbol=QQQ)), finished the session 4.3% below a pinnacle of 503.52. The SPDR S&P MidCap 400 ([MDY](https://research.investors.com/quote.aspx?symbol=MDY)) exchange traded fund is just 1.5% below its summit.  
+纳斯达克 100 指数追踪器景顺 QQQ Trust （[QQQ）](https://research.investors.com/quote.aspx?symbol=QQQ) 收盘下跌 4.3%，低于 503.52 的峰值。SPDR S&P MidCap 400 （[MDY](https://research.investors.com/quote.aspx?symbol=MDY)） 交易所交易基金仅比其峰值低 1.5%。
+
+
+Second, when looking at each individual distribution day on the Nasdaq, only one other session, namely Oct. 1, saw the key index drop at least 1%. The other three distribution days — a 0.2% gain and stalling session on Sept. 17, a 0.3% dip on Sept. 18, and a 0.4% fall on Sept. 20 — did not supply a vicious bite.  
+其次，在查看纳斯达克的每个单独分配日时，只有一个交易日（即 10 月 1 日）的关键指数下跌了至少 1%。其他三个派发日——9 月 17 日上涨 0.2% 并停滞不前，9 月 18 日下跌 0.3%，9 月 20 日下跌 0.4%——并没有造成恶性影响。
+
+
+And third, money continues to flow nicely into sectors that make sense. A few oil and gas firms exceled on Monday amid a nearly 4% spike in Nymex crude oil futures, based on the December expiring contract.  
+第三，资金继续很好地流入有意义的行业。根据 12 月到期的合约，在 Nymex 原油期货飙升近 4% 的情况下，一些石油和天然气公司周一表现出色。
 
 
 
@@ -152,7 +124,8 @@ Meanwhile, almost all of the [Magnificent Seven megacap techs](https://www.inves
 ---
 
 
-**[Five Top Stocks Near Buy Points: Cava Is Included](https://www.investors.com/news/broadcom-cava-stock-near-buy-points/)**
+[**Why Warren Buffett, Cathie Wood Both Own These Hot Stocks  
+为什么沃伦·巴菲特 （Warren Buffett） 和凯西·伍德 （Cathie Wood） 都拥有这些热门股票**](https://www.investors.com/news/warren-buffett-cathie-wood-own-two-stocks-tesla-rival/)
 
 
 
@@ -160,53 +133,127 @@ Meanwhile, almost all of the [Magnificent Seven megacap techs](https://www.inves
 ---
 
 
-Also In The Nasdaq
-------------------
+An Energy Sector Rebound 能源板块反弹
+-------------------------------
 
 
-**Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)), falling 1.6% in accelerating turnover, dropped sharply below its [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-provide-effective-tool-for-your-trading/).
+**Generac** ([GNRC](https://research.investors.com/quote.aspx?symbol=GNRC)), a leader in power generators, broke out of a base as Tampa and Orlando brace for what could be a catastrophic hurricane expected to make landfall in Florida on Wednesday evening.  
+发电机领导者 **Generac** （[GNRC）](https://research.investors.com/quote.aspx?symbol=GNRC) 在坦帕和奥兰多准备迎接预计将于周三晚上登陆佛罗里达州的灾难性飓风时，从基地中脱离。
 
 
-**Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)), behaving very bullishly since its Sept. 19 breakout to new highs, turned tail after eclipsing the 600 price level. Shares reversed for a 1.9% loss. Volume fell vs. the prior session and finished 12% below average.
+Generac drove past a 158.27 [early buy point](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-spotting-early-entries-on-potential-breakouts/) within a base last week. The National Oceanic and Atmospheric Administration, or NOAA, early Monday raised the level of Hurricane Milton as a Category 5 storm, the highest rating.  
+Generac 上周在一个底部内突破了 158.27 [的早盘买入点](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-spotting-early-entries-on-potential-breakouts/)。美国国家海洋和大气管理局 （NOAA） 周一早些时候将飓风米尔顿上调为 5 级风暴，这是最高等级。
 
 
-The sell-off among insurance companies was far harsher.
+
+Meanwhile, building products retailers **Home Depot** ([HD](https://research.investors.com/quote.aspx?symbol=HD)) and **Lowe's** ([LOW](https://research.investors.com/quote.aspx?symbol=LOW)) have rallied sharply off their spring and summertime lows as hurricane-hit communities from the Panhandle region of Florida up through Western North Carolina rush to rebuild in the aftermath of Hurricane Helene, which hit the U.S. shores as a Category 4 disaster.  
+与此同时，建筑产品零售商**家得宝** （[HD](https://research.investors.com/quote.aspx?symbol=HD)） 和 **Lowe's** （[LOW）](https://research.investors.com/quote.aspx?symbol=LOW) 已从春季和夏季的低点大幅反弹，因为从佛罗里达州狭长地带到北卡罗来纳州西部的受飓风袭击的社区在飓风海伦以 4 级灾难袭击美国海岸后急于重建。
 
 
-Take **Kinsale Capital** ([KNSL](https://research.investors.com/quote.aspx?symbol=KNSL)), part of [IBD's Long-Term Leaders list](https://www.investors.com/research/best-stocks-to-buy-now-long-term-stocks-ibd-long-term-leaders-list/). The property and casualty insurer wasted nearly two weeks' worth of gains after diving 7% to 452.26.
+A Heavy Industrial Glow 重工业的光芒
+------------------------------
 
 
-Turnover bulged 74% above the stock's average over the past 50 sessions. While 268,900 shares exchanging hands on Monday does not sound like a lot, Kinsale still trades at over 450 a share.
+Another industry that bucked Monday's decline? Heavy construction and engineering firms.  
+另一个逆势而上的行业？重型建筑和工程公司。
 
 
-More important, Kinsale sharply undercut the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-stocks-big-break-below-50-day-line-can-mark-end-of-a-huge-run/) and fell further away from a potential breakout point of 494.27 in a large [cup with handle](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/).
+
+**Fluor** ([FLR](https://research.investors.com/quote.aspx?symbol=FLR)) rallied 1.3% in above-average turnover to mark its fourth straight gain. The expert in construction and maintenance services for the oil, chemical, mining and transport industries lifted above a [double bottom showing a 50.48 buy point](https://www.investors.com/how-to-invest/investors-corner/double-bottoms-make-sure-the-second-leg-undercuts-the-first/). From this entry, the [5% buy zone](https://www.investors.com/how-to-invest/investors-corner/buy-zone-nvidia-stock/) goes up to 53.  
+**福陆** （[FLR](https://research.investors.com/quote.aspx?symbol=FLR)） 的营业额上涨 1.3%，高于平均水平，连续第四次上涨。石油、化工、采矿和运输行业的建筑和维护服务专家升至[双底上方，显示 50.48 个买入点](https://www.investors.com/how-to-invest/investors-corner/double-bottoms-make-sure-the-second-leg-undercuts-the-first/)。从这个条目开始，[5% 的买入区域](https://www.investors.com/how-to-invest/investors-corner/buy-zone-nvidia-stock/)上升到 53。
 
 
-Kinsale is a midcap growth stock with a market value of $10.5 billion.
+**Jacobs** ([J](https://research.investors.com/quote.aspx?symbol=J)), which also got some air time in [recent episodes of "IBD Live](https://research.investors.com/ibdlive/?id=IBD-Live&src=A00582A)," fell 1.5% to 137.97. That snapped a nine-day winning streak. But shares have acted bullishly since Jacobs roared past resistance near 127 and an early entry at 126.74 within its 2-1/2-month base. The large cap, with a $17 billion market value and 124.2 million shares outstanding, has risen as much as 11% from the 126.74 [proper buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/).  
+**雅各布斯** （[J](https://research.investors.com/quote.aspx?symbol=J)） 在[最近几集的“IBD Live](https://research.investors.com/ibdlive/?id=IBD-Live&src=A00582A)”中也获得了一些播出时间，下跌 1.5% 至 137.97。这结束了连续 9 天的胜利。但自从 Jacobs 突破 127 附近的阻力位并在其 2-1/2 个月底部早盘进入 126.74 以来，股市一直表现看涨。市值为 170 亿美元、流通股为 1.242 亿股的大盘股已从 126.74 个[适当的买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)上涨了 11%。
 
 
-[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_100724.pdf)
+Neither Fluor nor Jacobs have shown big earnings and sales gains in recent quarters, but it appears some fund managers have been accumulating shares in anticipation of mild double-digit profit increases in the next fiscal year.  
+福陆和雅各布斯在最近几个季度都没有显示出大幅的收益和销售额增长，但似乎一些基金经理一直在囤积股票，以期下一财年利润将出现两位数的温和增长。
 
 
-*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+They both possess a decent 92 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/the-ibd-composite-rating/).  
+他们都拥有不错的 92 [综合评分](https://www.investors.com/how-to-invest/investors-corner/the-ibd-composite-rating/)。
 
 
-**YOU MIGHT ALSO LIKE:**
+Meanwhile, almost all of the [Magnificent Seven megacap techs](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/) did even worse than the major stock market benchmarks, weighing not only on the Nasdaq but also on other large-cap indexes.  
+与此同时，几乎所有[七大科技股](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/)的表现都比主要股市基准更差，不仅对纳斯达克造成压力，也对其他大盘股指数造成压力。
 
 
-[A Potential 43% Return In This Bull Put Spread Trade](https://www.investors.com/research/options/vertiv-stock-vrt-breaks-out-bull-put-spread/)
 
 
-[Why The 21-Day Exponential Moving Average Matters](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)
+---
 
 
-[The Latest In IBD Videos](https://www.investors.com/ibd-videos)
+**[Five Top Stocks Near Buy Points: Cava Is Included  
+买入点附近的五只顶级股票：包括卡瓦酒](https://www.investors.com/news/broadcom-cava-stock-near-buy-points/)**
 
 
-[Here's The Latest IBD Podcast](https://get.investors.com/podcast/?src=A00511A)
 
 
-[Want To Find New Breakouts? Consult This List Each Day](https://research.investors.com/stocksonthemove.aspx)
+---
+
+
+Also In The Nasdaq 也在纳斯达克
+-------------------------
+
+
+**Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)), falling 1.6% in accelerating turnover, dropped sharply below its [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-provide-effective-tool-for-your-trading/).  
+**Microsoft** （[MSFT）](https://research.investors.com/quote.aspx?symbol=MSFT) 因成交量加速而下跌 1.6%，大幅跌破其 [200 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/moving-averages-provide-effective-tool-for-your-trading/)。
+
+
+**Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)), behaving very bullishly since its Sept. 19 breakout to new highs, turned tail after eclipsing the 600 price level. Shares reversed for a 1.9% loss. Volume fell vs. the prior session and finished 12% below average.  
+**Meta Platforms** （[META）](https://research.investors.com/quote.aspx?symbol=META) 自 9 月 19 日突破新高以来表现非常看涨，在突破 600 价格水平后转身。股价反转下跌 1.9%。成交量与前一交易日相比有所下降，收盘价比平均水平低 12%。
+
+
+The sell-off among insurance companies was far harsher.  
+保险公司之间的抛售要严重得多。
+
+
+Take **Kinsale Capital** ([KNSL](https://research.investors.com/quote.aspx?symbol=KNSL)), part of [IBD's Long-Term Leaders list](https://www.investors.com/research/best-stocks-to-buy-now-long-term-stocks-ibd-long-term-leaders-list/). The property and casualty insurer wasted nearly two weeks' worth of gains after diving 7% to 452.26.  
+以 **Kinsale Capital** （[KNSL）](https://research.investors.com/quote.aspx?symbol=KNSL) 为例，它是 [IBD 长期领导者名单](https://www.investors.com/research/best-stocks-to-buy-now-long-term-stocks-ibd-long-term-leaders-list/)的一部分。这家财产和意外伤害保险公司在暴跌 7% 至 452.26 后浪费了近两周的收益。
+
+
+Turnover bulged 74% above the stock's average over the past 50 sessions. While 268,900 shares exchanging hands on Monday does not sound like a lot, Kinsale still trades at over 450 a share.  
+在过去 50 个交易日中，成交量比该股的平均水平高出 74%。虽然周一有 268,900 股易手听起来并不多，但 Kinsale 的交易价格仍超过每股 450 股。
+
+
+More important, Kinsale sharply undercut the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-stocks-big-break-below-50-day-line-can-mark-end-of-a-huge-run/) and fell further away from a potential breakout point of 494.27 in a large [cup with handle](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/).  
+更重要的是，Kinsale 大幅跌破 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-stocks-big-break-below-50-day-line-can-mark-end-of-a-huge-run/)，并在[带手柄的大杯中](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/)进一步远离潜在的突破点 494.27。
+
+
+Kinsale is a midcap growth stock with a market value of $10.5 billion.  
+Kinsale 是一只市值为 105 亿美元的中型成长型股票。
+
+
+[View General Market Indicator charts page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_100724.pdf)
+
+
+*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)  
+*请在 X/Twitter 上关注 Chung：*[*@saitochung*](https://twitter.com/SaitoChung) *和* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+
+
+**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
+
+
+[A Potential 43% Return In This Bull Put Spread Trade  
+在这种牛市看跌价差交易中可能获得 43% 的回报](https://www.investors.com/research/options/vertiv-stock-vrt-breaks-out-bull-put-spread/)
+
+
+[Why The 21-Day Exponential Moving Average Matters  
+为什么 21 天指数移动平均线很重要](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)
+
+
+[The Latest In IBD Videos  
+最新的 IBD 视频](https://www.investors.com/ibd-videos)
+
+
+[Here's The Latest IBD Podcast  
+这是最新的 IBD 播客](https://get.investors.com/podcast/?src=A00511A)
+
+
+[Want To Find New Breakouts? Consult This List Each Day  
+想找到新的突破吗？每天查阅此列表](https://research.investors.com/stocksonthemove.aspx)
 
 
 
