--- a/_columns/The_Big_Picture/zh-cn/2024-10-09.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-09.md
@@ -115,13 +115,16 @@ Core prices excluding food and energy items are estimated to rise 0.2% and 3.2% 
 **YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
+[The Four Pillars Of The IBD Methodology  
+IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
 
 
-[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Risk Management In The Stock Market: How Much Money To Invest  
+股票市场的风险管理：投资多少钱](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
+[IBD Live: Learn And Analyze Growth Stocks With The Pros  
+IBD Live：与专业人士一起学习和分析成长型股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
 
 
